# hooker

./: Changelog.md  Makefile  pyproject.toml
.github/workflows/: check.yaml
config/: hooker.yaml
hooker/src/hooker/: main.py
src/hooker/: main.py
tests/: conftest.py  test_hooker.py
