[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hooker"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "pyyaml",
    "typer",
    "uvicorn",
]

[tool.setuptools.packages.find]
where = ["hooker/src"]

[project.scripts]
hooker = "hooker.main:main"
