[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hooker"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "pyyaml",
    "typer",
    "uvicorn",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
hooker = "hooker.main:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "requests",
]
